refactor: enhance DTO documentation and validation in ECR components